mentioned new functions in the manual's introduction

--- a/html/help.html
+++ b/html/help.html
@@ -62,6 +62,10 @@
         <li>die automatischen Verknüpfungen mit WGd-Artikeln im Belegnavigator.</li>
       </ul>
 
+      <p>Darüber hinaus kann <i>QS</i> die <a href="https://www.zdl.org/wb/wortgeschichten/">Artikelübersicht</a> und den Index im <a href="https://www.zdl.org/wb/wgd/Terminologie">terminologischen Kerninventar</a> auffrischen. Außerdem ist die App in der Lage, die Wortverlaufskurven an das ZDL-Farbschema anzupassen. Diese Funktionen werden im Abschnitt <a href="#publikation">Publikation</a> erläutert.</p>
+
+      <p><i>Für Entwickler*innen:</i> Die Publikationsfunktionen lassen sich alle via <a href="#verschiedenes-cli">CLI</a> ausführen.</p>
+
       <h1><span>Überblick</span></h1>
 
       <p id="allgemeines-ueberblick">Die App hat <b>vier Ansichten</b>, die über den Kopf des Hauptfensters angesteuert werden können: <a href="#xml"><i>XML</i></a>, <a href="#hinweise"><i>Hinweise</i></a>, <a href="#clusterei"><i>Clusterei</i></a> und <a href="#suche"><i>Suche</i></a>. Die Daten für die Operationen und Anzeigen dieser Ansichten speisen sich aus einem lokalen <a href="#git-einrichtung">Klon des Wortgeschichten-Repositorys</a>, der zunächst eingerichtet werden muss. Ohne Repository im Hintergrund ist die App nicht lauffähig. Darum werden beim ersten Start auch der Ort und der Benutzername für dieses Repository erfragt.</p>
