[[change]] CLI: die mit --export-out übergebene Pfadangabe muss nicht mehr zwingend absolut, sie darf auch relativ sein

--- a/html/help.html
+++ b/html/help.html
@@ -1403,7 +1403,7 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
       <pre><b>--export-out=[Ordner]</b></pre>
 
-      <p class="indent-hint">Übergibt den Zielordner, in den hinein die gewünschte Datei exportiert werden soll. Wird eine der folgenden <code>--export</code>-Optionen genutzt, muss <code>--export-out</code> <em>zwingend</em> angegeben werden. Der übergebene Pfad muss außerdem <em>zwingend</em> ein Ordner und <em>zwingend</em> absolut sein.</p>
+      <p class="indent-hint">Übergibt den Zielordner, in den hinein die gewünschte Datei exportiert werden soll. Wird eine der folgenden <code>--export</code>-Optionen genutzt, muss <code>--export-out</code> <em>zwingend</em> angegeben werden. Der übergebene Pfad muss außerdem <em>zwingend</em> ein Ordner, kann aber sowohl absolut als auch relativ sein.</p>
 
       <pre><b>--export-artikel-json</b></pre>
 
