security: in the CSP, be more specific about the allowed URL paths

--- a/win.html
+++ b/win.html
@@ -2,7 +2,12 @@
 <html lang="de">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://github.com/WortgeschichteDigital/QS/">
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self'
+      ;
+      connect-src
+        https://github.com/WortgeschichteDigital/QS/releases.atom
+    ">
 
     <title>QS</title>
 
