--- a/html/worker.html
+++ b/html/worker.html
@@ -2,7 +2,12 @@
 <html lang="de">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://www.deutschestextarchiv.de/demo/cab/">
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self'
+      ;
+      connect-src
+        https://www.deutschestextarchiv.de/demo/cab/query
+    ">
 
     <title>QS / Worker</title>
 
