--- a/html/about.html
+++ b/html/about.html
@@ -27,7 +27,7 @@
         ><img src="../img/icon/icon.svg" width="144" height="144" alt=""
       ></aside>
       <h1>Version <span id="version"></span></h1>
-      <p><i>QS</i> ist die Qualitätssicherungs-App von <i>Wortgeschichte digital</i> (<a href="https://adw-goe.de/forschung/weitere-forschungsprojekte/wortgeschichte-digital-teilprojekt-im-zdl/">WGd</a>), dem an der <i>Niedersächsischen Akademie der Wissenschaften zu Göttingen</i> (<a href="https://adw-goe.de/">NAdWG</a>) angesiedelten Teilprojekt des <i>Zentrums für digitale Lexikographie der deutschen Sprache</i> (<a href="https://www.zdl.org/">ZDL</a>). WGd und das ZDL werden gefördert vom <i>Bundesministerium für Bildung und Forschung</i> (<a href="https://www.bmbf.de/">BMBF</a>).</p>
+      <p><i>QS</i> ist die Qualitätssicherungs-App von <i>Wortgeschichte digital</i> (<a href="https://adw-goe.de/forschung/weitere-forschungsprojekte/wortgeschichte-digital-teilprojekt-im-zdl/">WGd</a>), dem an der <i>Niedersächsischen Akademie der Wissenschaften zu Göttingen</i> (<a href="https://adw-goe.de/">NAWG</a>) angesiedelten Teilprojekt des <i>Zentrums für digitale Lexikographie der deutschen Sprache</i> (<a href="https://www.zdl.org/">ZDL</a>). WGd und das ZDL werden gefördert vom <i>Bundesministerium für Bildung und Forschung</i> (<a href="https://www.bmbf.de/">BMBF</a>).</p>
     </main>
 
     <!-- LICENSES AND ELECTRON INFO -->
