[[feature]] in den Einstellungen gibt es eine neue Funktion zum Leeren des HTML-Cache

--- a/html/help.html
+++ b/html/help.html
@@ -1107,6 +1107,10 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
       <p class="indent-hint">Klicken Sie auf den Button <i>Löschen</i> wird der Cache gelöscht und umgehend neu berechnet. Die Option ist eher für Entwickler gedacht und sollte für Ihren Arbeitsalltag nicht von Bedeutung sein.</p>
 
+      <p id="einstellungen-htmlCache" class="option">HTML-Cache</p>
+
+      <p class="indent-hint">Das <a href="#xml-vorschaufenster">Vorschaufenster</a> ruft eine bestimmte Seite auf zdl.org auf, um die die Vorschauansicht eines Artikels zu erzeugen. Die empfangenen Daten werden in einem Cache gespeichert, um spätere Aufrufe zu beschleunigen. Wenn es ein größeres Update auf zdl.org gibt, kann es sein, dass die Ansicht im Vorschaufenster nicht mehr korrekt funktioniert. In diesem Fall sollten Sie den Cache leeren, damit das Fenster beim nächsten Öffnen alle Dateien neu herunterlädt.</p>
+
       <h1><span>Einstellungen: Git</span></h1>
 
       <p id="einstellungen-git">Klicken Sie auf den Button <i>Konfiguration</i> wird das Einstellungsfenster für Git geöffnet. Es ist dasselbe Fenster, dass Sie beim ersten Start der App bereits gesehen haben. Dieses Einstellungsfenster können Sie nur schließen, indem Sie auf <i>Okay</i> klicken. Sollte die Konfiguration fehlerhaft sein, weigert <i>QS</i> sich, das Fenster zu schließen.</p>
