--- a/win.html
+++ b/win.html
@@ -496,6 +496,12 @@
               <p
                 ><input type="button" value="Löschen" id="prefs-cache-leeren"
               ></p>
+              <h2>HTML-Cache<a href="#einstellungen-htmlCache" id="prefs-help-html-cache" class="icon"
+                ><img src="img/win/help.svg" width="24" height="24" alt=""
+              ></a></h2>
+              <p
+                ><input type="button" value="Löschen" id="prefs-html-cache-leeren"
+              ></p>
             </div>
 
             <!-- Git -->
